[*] onVoteEnd        - Native alias that is executed when a vote passes or fails.
[*] onKill           - Native alias that is executed when a player is killed.
[*] onFlagEvent      - Native alias that is executed when a flag event occurs.
[*] onLastMin        - Native alias that is executed when the last minute of the current round is reached.
[*] onReload         - Native alias that is executed when you reload a weapon.
[*] onNewMap         - Native alias that is executed when you execute the /newmap command.
[*] afterinit        - Native alias that is executed immediately after saved.cfg is loaded.
[*] votepending      - Client variable that is 1 if there is a vote currently pending on the server, else 0. (e.g. echo $votepending // Example output: 0)
[*] setfollowplayer  - Spectates the player with client number x.
[*] setmr            - Seeks a demo to x minutes remaining.
[*] rewind           - Rewinds a demo of x seconds. Forwards if x is negative.
[*] dyngamma         - Enables or disables a new "per-official-map dynamic gamma system".
[*] fragmessage      - Sets the frag message corresponding to a weapon. (Appears on the HUD and in your server logs.)
[*] gibmessage       - Sets the gib message corresponding to a weapon. (Appears on the HUD and in your server logs.)
[*] setgamma         - Sets the default gamma for the map you're on. (Must be an official map.)
[*] forceme          - Calls a vote to force yourself to the enemy team.
[*] copyent          - Copies the current closest entity into a buffer. (Must be in edit mode.)
[*] countwalls       - Returns the number of walls of type x that is in the current selection.
[*] old_editbinds    - Enables or disables the old editing binds. (If disabled, an updated editing binds system is used, that is focused around toggles rather than individual actions for each bind. For more info see the comments in /config/resetbinds.cfg)
[*] pasteent         - Pastes the previously copied entity. (Must be in edit mode.)