@@ -625,7 +625,10 @@ docexample [echo $votepending] [Output: if there is currently a vote pending, re
 docident [onSpawn] [If this alias exists it will be run every time someone spawns.];
 docident [onKill] [If this alias exists it will be run every time a player is killed.];
 docident [onFlag] [If this alias exists it will be run every time a flag action occurs.];
+docident [onPickup] [If this alias exists it will be run every time you pick up an item.];
+docident [onWeaponSwitch] [If this alias exists it will be run every time you switch to a different weapon.];
 docident [onConnect] [If this alias exists it will be run every time you or another player join(s) your server.];
+docident [onDisconnect] [If this alias exists it will be run every time you disconnect from a server.];
 docident [onNameChange] [If this alias exists it will be run every time you or another player change(s) of name.];
 docident [mdldyncache] [];
 docargument [V] [] [min 1/max 32/default 2];
