@@ -307,23 +307,23 @@ void pickupeffects(int n, playerent *d)
             if(identexists("onPickup"))
             {
                 string o;
-                itemstat tmp;
+                itemstat *tmp = NULL;
                 switch(e.type)
                 {
-                    case I_CLIPS:   tmp = ammostats[GUN_PISTOL]; break;
-                    case I_AMMO:    tmp = ammostats[player1->primary]; break;
-                    case I_GRENADE: tmp = ammostats[GUN_GRENADE]; break;
-                    case I_AKIMBO:  tmp = ammostats[GUN_AKIMBO]; break;
+                    case I_CLIPS:   tmp = &ammostats[GUN_PISTOL]; break;
+                    case I_AMMO:    tmp = &ammostats[player1->primary]; break;
+                    case I_GRENADE: tmp = &ammostats[GUN_GRENADE]; break;
+                    case I_AKIMBO:  tmp = &ammostats[GUN_AKIMBO]; break;
                     case I_HEALTH:
                     case I_HELMET:
-                    case I_ARMOUR:  tmp = powerupstats[e.type-I_HEALTH]; break;
+                    case I_ARMOUR:  tmp = &powerupstats[e.type-I_HEALTH]; break;
                     default: break;
                 }
-                if(m_lss && e.type == I_GRENADE)
-                    formatstring(o)("onPickup %d %d", e.type - 3, 2);
-                else
-                    formatstring(o)("onPickup %d %d", e.type - 3, tmp);
-                execute(o);
+                if(tmp)
+                {
+                    formatstring(o)("onPickup %d %d", e.type - 3, m_lss && e.type == I_GRENADE ? 2 : tmp->add);
+                    execute(o);
+                }
             }
         }
         else audiomgr.playsound(is.sound, d);
@@ -663,4 +663,3 @@ void syncentchanges(bool force)
     changedents.setsize(0);
     lastentsync = lastmillis;
 }
-
