@@ -124,6 +124,9 @@ CubeScript
 [*] onKill           - Native alias that is executed when a player is killed.
 [*] onFlagEvent      - Native alias that is executed when a flag event occurs.
 [*] onLastMin        - Native alias that is executed when the last minute of the current round is reached.
+[*] onPickup         - Native alias that is executed when you pick up an item.
+[*] onWeaponSwitch   - Native alias that is executed when you switch to a different weapon.
+[*] onDisconnect     - Native alias that is executed when you disconnect from a server.
 [*] onReload         - Native alias that is executed when you reload a weapon.
 [*] onNewMap         - Native alias that is executed when you execute the /newmap command.
 [*] afterinit        - Native alias that is executed immediately after saved.cfg is loaded.
